--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1162,4 +1162,7 @@ config TOUCHSCREEN_IST30XX
 
 source "drivers/input/touchscreen/IST30xx/Kconfig"
 
+config WAKE_GESTURES
+	bool "wake gestures"
+
 endif
