--- a/arch/arm64/configs/land_defconfig
+++ b/arch/arm64/configs/land_defconfig
@@ -658,3 +658,6 @@ CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_QMI_ENCDEC=y
 CONFIG_WAKE_GESTURES=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_CPU_BOOST=y
+CONFIG_DISABLE_TRACE_PRINTK=y
+CONFIG_JUMP_LABEL=y
